# mcp-client-python

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/mcp_client/: cli.py  client.py
tests/: conftest.py  test_cli.py  test_client.py
