[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-client-python"
version = "0.1.0"
description = "Python client library and CLI for connecting to a serverless MCP server"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.0",
    "click>=8.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.scripts]
mcp-client = "mcp_client.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_client"]
