[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mcp-client-python"
dynamic = ["version"]
description = "Python client library and CLI for connecting to a serverless MCP server"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.0",
    "click>=8.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.scripts]
mcp-client = "mcp_client.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_client"]
